--- a/public/real-state/home.html
+++ b/public/real-state/home.html
@@ -156,7 +156,7 @@
 <span class="flex items-center gap-1.5"><span class="material-symbols-outlined text-base">straighten</span> 200 m²</span>
 </div>
 <button class="mt-auto w-full mt-4 flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-11 px-4 bg-primary/20 text-primary text-sm font-bold leading-normal tracking-[0.015em] hover:bg-primary/30 transition-colors">
-                        Ver Detalles
+                       <a href="/real-state/detail-house.html" >Ver Detalles</a>
                       </button>
 </div>
 </div>
@@ -226,7 +226,7 @@
 <span class="flex items-center gap-1.5"><span class="material-symbols-outlined text-base">straighten</span> 1000 m²</span>
 </div>
 <button class="mt-auto w-full mt-4 flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-11 px-4 bg-primary/20 text-primary text-sm font-bold leading-normal tracking-[0.015em] hover:bg-primary/30 transition-colors">
-                        Ver Detalles
+                        <a href="/real-state/detail-house.html" >Ver Detalles</a>
                       </button>
 </div>
 </div>
