--- a/public/real-state/home.html
+++ b/public/real-state/home.html
@@ -60,9 +60,9 @@
 </div>
 <div class="hidden md:flex flex-1 justify-end gap-8 items-center">
 <div class="flex items-center gap-9">
-<a class="text-sm font-medium leading-normal hover:text-primary transition-colors" href="#">Comprar</a>
+<a class="text-sm font-medium leading-normal hover:text-primary transition-colors" href="buscador-propiedades.html">Comprar</a>
 <a class="text-sm font-medium leading-normal hover:text-primary transition-colors" href="#">Alquilar</a>
-<a class="text-sm font-medium leading-normal hover:text-primary transition-colors" href="#">Nosotros</a>
+<a class="text-sm font-medium leading-normal hover:text-primary transition-colors" href="dashboard.html">Dashboard</a>
 <a class="text-sm font-medium leading-normal hover:text-primary transition-colors" href="#">Contacto</a>
 </div>
 <button class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-6 bg-primary text-white text-sm font-bold leading-normal tracking-[0.015em] hover:bg-primary/90 transition-colors">
@@ -111,9 +111,9 @@
 <input class="w-full h-12 rounded-lg bg-background-light dark:bg-background-dark border border-gray-300 dark:border-gray-600 focus:ring-primary focus:border-primary" id="price-range" placeholder="$0 - $1,000,000+" type="text"/>
 </div>
 <div class="col-span-1">
-<button class="w-full h-12 flex items-center justify-center rounded-lg bg-primary text-white text-base font-bold tracking-wide hover:bg-primary/90 transition-colors">
+                <a href="buscador-propiedades.html" class="w-full h-12 flex items-center justify-center rounded-lg bg-primary text-white text-base font-bold tracking-wide hover:bg-primary/90 transition-colors">
                         Buscar Propiedades
-                      </button>
+                </a>
 </div>
 </div>
 </div>
@@ -137,8 +137,8 @@
 <span class="flex items-center gap-1.5"><span class="material-symbols-outlined text-base">bathtub</span> 2 baños</span>
 <span class="flex items-center gap-1.5"><span class="material-symbols-outlined text-base">straighten</span> 120 m²</span>
 </div>
-<button class="mt-auto w-full mt-4 flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-11 px-4 bg-primary/20 text-primary text-sm font-bold leading-normal tracking-[0.015em] hover:bg-primary/30 transition-colors">
-                        Ver Detalles
+                <button class="mt-auto w-full mt-4 flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-11 px-4 bg-primary/20 text-primary text-sm font-bold leading-normal tracking-[0.015em] hover:bg-primary/30 transition-colors">
+                        <a href="detail-house.html">Ver Detalles</a>
                       </button>
 </div>
 </div>
@@ -173,8 +173,8 @@
 <span class="flex items-center gap-1.5"><span class="material-symbols-outlined text-base">bathtub</span> 2 baños</span>
 <span class="flex items-center gap-1.5"><span class="material-symbols-outlined text-base">straighten</span> 180 m²</span>
 </div>
-<button class="mt-auto w-full mt-4 flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-11 px-4 bg-primary/20 text-primary text-sm font-bold leading-normal tracking-[0.015em] hover:bg-primary/30 transition-colors">
-                        Ver Detalles
+                <button class="mt-auto w-full mt-4 flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-11 px-4 bg-primary/20 text-primary text-sm font-bold leading-normal tracking-[0.015em] hover:bg-primary/30 transition-colors">
+                        <a href="detail-house.html">Ver Detalles</a>
                       </button>
 </div>
 </div>
@@ -191,8 +191,8 @@
 <span class="flex items-center gap-1.5"><span class="material-symbols-outlined text-base">bathtub</span> 4 baños</span>
 <span class="flex items-center gap-1.5"><span class="material-symbols-outlined text-base">straighten</span> 350 m²</span>
 </div>
-<button class="mt-auto w-full mt-4 flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-11 px-4 bg-primary/20 text-primary text-sm font-bold leading-normal tracking-[0.015em] hover:bg-primary/30 transition-colors">
-                        Ver Detalles
+                <button class="mt-auto w-full mt-4 flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-11 px-4 bg-primary/20 text-primary text-sm font-bold leading-normal tracking-[0.015em] hover:bg-primary/30 transition-colors">
+                        <a href="detail-house.html">Ver Detalles</a>
                       </button>
 </div>
 </div>
