agregando links a real state

--- a/public/real-state/home.html
+++ b/public/real-state/home.html
@@ -58,16 +58,13 @@
 </div>
 <h2 class="text-xl font-bold leading-tight tracking-[-0.015em]">Real Estate</h2>
 </div>
-<div class="hidden md:flex flex-1 justify-end gap-8 items-center">
-<div class="flex items-center gap-9">
-<a class="text-sm font-medium leading-normal hover:text-primary transition-colors" href="buscador-propiedades.html">Comprar</a>
-<a class="text-sm font-medium leading-normal hover:text-primary transition-colors" href="#">Alquilar</a>
-<a class="text-sm font-medium leading-normal hover:text-primary transition-colors" href="dashboard.html">Dashboard</a>
-<a class="text-sm font-medium leading-normal hover:text-primary transition-colors" href="#">Contacto</a>
-</div>
-<button class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-6 bg-primary text-white text-sm font-bold leading-normal tracking-[0.015em] hover:bg-primary/90 transition-colors">
-<span class="truncate">Iniciar Sesión / Registrarse</span>
-</button>
+<div class="hidden md:flex flex-1 justify-end gap-4 items-center">
+<a class="flex min-w-[84px] max-w-[160px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-6 bg-primary/70 text-white text-sm font-bold leading-normal tracking-[0.015em] hover:bg-primary/80 transition-colors" href="#">
+<span class="truncate">Alquilar</span>
+</a>
+<a class="flex min-w-[84px] max-w-[160px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-6 bg-primary/70 text-white text-sm font-bold leading-normal tracking-[0.015em] hover:bg-primary/80 transition-colors" href="dashboard.html">
+<span class="truncate">Dashboard</span>
+</a>
 </div>
 <div class="md:hidden">
 <button class="p-2">
